--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "tailwind:watch": "tailwindcss -i ./src/tailwind.css -o ./dist/output.css --watch",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -28,7 +29,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.11",
     "vite": "^7.0.0"
   }
 }
