--- a/NeuroHome/package.json
+++ b/NeuroHome/package.json
@@ -11,9 +11,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
     "@tailwindcss/vite": "^4.1.11",
     "@vitejs/plugin-react": "^4.6.0",
     "class-variance-authority": "^0.7.1",
@@ -23,6 +26,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.3",
+    "react-router-dom": "^7.6.3",
     "saas": "^1.0.0",
     "sass": "^1.89.2",
     "tailwind-merge": "^3.3.1",
