--- a/NeuroHome/package.json
+++ b/NeuroHome/package.json
@@ -21,6 +21,7 @@
     "@vitejs/plugin-react": "^4.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.0",
     "lucide-react": "^0.525.0",
     "radix-ui": "^1.4.2",
     "react": "^19.1.0",
